--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
     <div class="overlay">
-        <h1>Welcome to StoryHub</h1>
+        <h1>Welcome to <span>Story</span>Hub</h1>
         <p>Click the <span><i class="fa-solid fa-cube" loading="eager"></i></span> to continue!</p>
     </div>
     <div id="story-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
-    
-    <footer>© 2024 StoryHub. All rights reserved.</footer>
 </body>
 </html>
 
