--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="story-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
+    <footer>Created by PreshCode</footer>
 </body>
 </html>
 
