fix(merge): additional stories added!

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoryHub</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/z.png">
+    <link rel="icon" type="image/x-icon" href="image/z.png">
     <script src="https://kit.fontawesome.com/69b7050fd6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="overlay">
-        <h1>Welcome to <span>Story</span>Hub</h1>
+        <h1>Welcome to StoryHub</h1>
         <p>Click the <span><i class="fa-solid fa-cube" loading="eager"></i></span> to continue!</p>
     </div>
     <div id="story-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
-    <footer>Created by PreshCode</footer>
+    <footer>Created by <a href="https://github.com/KelvinCode1234">PreshCode</a></footer>
 </body>
 </html>
 
