--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="image/z.png">
     <script src="https://kit.fontawesome.com/69b7050fd6.js" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2LFQZ9XWXL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2LFQZ9XWXL');
+    </script>
 </head>
 <body>
     <div class="overlay">
