--- a/story.html
+++ b/story.html
@@ -7,6 +7,15 @@
     <title>Story Page</title>
     <link rel="icon" type="image/x-icon" href="image/z.png">
     <link rel="stylesheet" href="story.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2LFQZ9XWXL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2LFQZ9XWXL');
+    </script>
 </head>
 
 <body>
