feedback submission ui designed neatly!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="story-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
-    <footer>Created by <a href="https://github.com/KelvinCode1234">PreshCode</a></footer>
+    <footer>Created by <a href="https://github.com/KelvinCode1234">KelvinCode with ❤</a></footer>
 </body>
 </html>
 
